syntax = "proto3";

package ai.service;

option java_package = "com.ai.aimicroservice.grpc";
option java_multiple_files = true;

message AnalyzeRequest {
  bytes data = 1;
  string fileName = 2;
  string postId = 3;
}